<resources>
    <string name="app_name">tai</string>
    <string name="Icon">Icon</string>
    <string name="changer">Changer</string>

    <string name="name_app">S2Note</string>
    <string name="trang1">Trang 1</string>
    <string name="trang4_1">Trang 4</string>
    <string name="trang5_1">Trang 5</string>
    <string name="trang6">Trang 6</string>
    <string name="trang7">Trang 7</string>
    <string name="trang8">Trang 8</string>
    <string name="trang3">Trang 3</string>
    <string name="trang4">Viewmodel</string>
    <string name="trang5">Permission</string>
    <string name="trang2">Trang 2</string>
    <string name="dialog">Dialog AlertDialog</string>
    <string name="customDialog">Custom Dialog</string>
    <string name="bottomSheetDialog">Bottom Sheet Dialog</string>
    <string name="activityDialog">Activity Dialog</string>
    <string name="Parcelable">Parcelable</string>
    <string name="checkNetwork">CheckNetwork</string>
    <string name="Serializable">Serializable</string>
    <string name="libraryParcelable">LibraryParcelable</string>
    <string name="transferJson">TransferJson</string>
    <string name="service">Service</string>
    <string name="customBroadcastReceiver">Custom Broadcast Receiver</string>
    <string name="fragment">Fragment</string>
    <string name="fragment1">Fragment1</string>
    <string name="btnEventBus">EventBus</string>
    <string name="btnVersionSdk1">Version SDK dưới 11(dưới APi 30)</string>
    <string name="btnVersionSdk2">Version SDK trên 11 dưới 13(trên 30 dưới 32)</string>
    <string name="btnVersionSdk3">Version SDK 13(Api 33)</string>
    <string name="btnVersionSdk4">Version SDK trên 14(Api trên 34)</string>
    <string name="editText1">Nhập thông tin tên </string>
    <string name="editText2">Nhập thông tin tuổi </string>
    <string name="editText3">Nhập thông tin địa chỉ </string>
    <string name="takephoto">Hình ảnh</string>
    <string name="transfer">Web</string>
    <string name="contentprovider">Content Provider</string>
    <string name="memory">Bộ nhớ</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="notification">Notification </string>
    <string name="camera">Chụp ảnh</string>
    <string name="dialogFragment">Dialog Frament</string>
    <string name="alertdialog">Thông tin cần lưu ý</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Login</string>
    <string name="password1">Password</string>
    <string name="date_picker_dialog">DatePickerDialog</string>
    <string name="date_time_picker">TimePickerDialog</string>
    <string name="back_data">Dữ liệu từ trang sau</string>
    <string name="student_info">%1$s - %2$d - %3$s</string>
    <string name="staff_info">%1$d - %2$s - %3$d - %4$.2f</string>
    <string name="teacher_info">%1$s - %2$d</string>
    <string name="student_list">Tên: %1$s, Tuổi: %2$d, Địa chỉ: %3$s</string>
    <string name="from">Từ</string>
    <string name="ecomobile">Eco Mobile</string>
    <string name="ipatitle">Bứt phá phong cách</string>
    <string name="selection1">PRO</string>
    <string name="selection2">CƠ BẢN</string>
    <string name="tablecell1">Truy cập tất cả các chủ đề</string>
    <string name="tablecell2">Mở khóa tính năng D.T.Y</string>
    <string name="tablecell3">Xóa quảng cáo</string>
    <string name="tablecell4">1000+ Biểu tượng,Tiện ích</string>
    <string name="limit">Giới hạn</string>
    <string name="start">Bắt đầu dùng thử</string>
    <string name="isIAP">Chưa tính phí</string>

    <string name="introduce">Dùng thử 3 ngày mễn phí, sau đó tự động gia hạn với giá 9.900 đ/tuần.Hủy bất kì lúc nào</string>
    <string name="introduce1">• Thanh toán sẽ được tính vào tài khoản Google Play của bạn sau khi xác nhận mư hoặc khi kết thức giai đoạn dùng thử</string>
    <string name="introduce2">• Gói đăng kí sẽ tự động gia hạn theo kế hoạch bạn chọn trừ khi bạn hủy trước 24 giwof trước khi kết thức chu kỳ hiện tại hoặc giai đoạn dùng thử</string>
    <string name="introduce3">• Người dùng không đăng ký vẫn có thể sự dụng ứng dụng nhưng một số tinh năng trả phí có thể bị giới hạn</string>
    <string name="introduce4">• Bạn có thể quản lí hoặc hủy bất kỳ lúc nào tại Đăng ký trong Google Play</string>
    <string name="security"><![CDATA[Chính sách bảo mật]]></string>
    <string name="text">Tất cả ghi chú</string>
    <string name="text1">Tạo ghi chú</string>
    <string name="Tiêu_đề_ví_dụ">Tiêu đề ví dụ</string>
    <string name="mo_ta">Mô tả</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="score">50</string>
    <string name="Pro">Pro</string>
    <string name="Optimize_Storage_Get_Space">Optimize Storage, Get Space</string>
    <string name="price_off">%1$s/week</string>
    <string name="price">%1$s</string>
    <string name="we_couldnt_load_the_infomation">We couldn’t load the infomation</string>
    <string name="try_again">Try again</string>
    <string name="week">/week</string>
    <string name="year">/year</string>
    <string name="discount">OFF 50%</string>
    <string name="percent">30%</string>
    <string name="off">OFF</string>


    <string name="claim_offer">CLAIM OFFER</string>

    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies">
    By continuing, you agree to our <u>Terms</u> and <u>Privacy policies</u>.\n
    • Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
    • Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
    • You will not be charged if subscription is canceled before trial period ends.\n
    • Subscription is not required to use V9Compress
</string>
    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policies2">
    By continuing, you agree to our <u>Terms</u> and <u>Privacy policies</u>.\n
    Subscription gives you access to V9Compress\'s premium features, all ads will be removed.\n
    Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.\n
    You will not be charged if subscription is canceled before trial period ends.\n
    Subscription is not required to use V9Compress
</string>


    <string name="billed_weekly_cancel_anytime"> %1$s for first week then %2$s next week.
    \nBilled weekly, cancel anytime.</string>
    <string name="try_3_day_for_free">Try 3 days for FREE, then 8.99$ per week.\nAuto renew, cancel anytime</string>
    <string name="faster_compress_made_simple">Faster compress made simple</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="shrink_size_keep_quality">SHRINK SIZE\nKEEP QUALITY</string>
    <string name="after_free_trial_ends_yearly">$14.99/year after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="after_free_trial_ends_yearly_max">%1$s/year after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="after_free_trial_ends_weekly">%1$s/weekly after free trial ends.\nAuto renew, Cancel anytime</string>
    <string name="after_intro_ends_weekly">%1$s for first 2 weeks, then %2$s/week.\nAutomatically renews, cancel anytime</string>
    <string name="year_enable">14.99/year.\nAuto renew, Cancel anytime</string>
    <string name="weekly_enable">4.99/weekly.\nAuto renew, Cancel anytime</string>
    <string name="auto_renew_cancel_anytime">Auto renew, Cancel anytime</string>
    <string name="free_trial_enabled">Free trial enabled</string>
    <string name="enable_free_trial">Enabled free trial </string>
    <string name="try_for_free">TRY FOR FREE</string>
    <string name="continue1">CONTINUE</string>
    <string name="high_quality_compression">high-quality\ncompression</string>
    <string name="smarter_storage_made_affordable">SMARTER STORAGE MADE\nAFFORDABLE</string>
    <string name="saved">Saved 92%</string>
    <string name="yearly_plan">Yearly Plan</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="only_price_per_week">Only %1$s per week</string>
    <string name="money_plan">$19.99/year</string>
    <string name="price_year">$19.99</string>
    <string name="price_week">$4.99</string>
    <string name="free_trial_ends_in">3-day free trial enabled</string>
    <string name="free_trial_ends_in_two">2-months free trial enabled</string>
    <string name="cacel_anytime">Cancel anytime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="category_chart">Category Chart</string>
    <string name="crop_main"> Crop Video</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="context_thank">Hi there!\n\nThanks for reporting this issue. We’re always improving the app based on user feedback. Could you share more details so our team can help fix it for you and others?\n\nContact us anytime at cropvideo@ecomobile.vn — we’re happy to help!</string>
</resources>